--- a/app/src/main/res/drawable/background_premium_box_with_campaign.xml
+++ b/app/src/main/res/drawable/background_premium_box_with_campaign.xml
@@ -2,14 +2,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:bottom="@dimen/premium_box_campaign_header_height">
         <shape android:shape="rectangle">
-            <corners android:topLeftRadius="@dimen/background_rounded_corner_radius" android:topRightRadius="@dimen/background_rounded_corner_radius"/>
+            <corners
+                android:topLeftRadius="@dimen/background_rounded_corner_radius"
+                android:topRightRadius="@dimen/background_rounded_corner_radius" />
             <solid android:color="@color/hedvig_dark_gray" />
         </shape>
     </item>
     <item android:top="@dimen/premium_box_campaign_header_height">
         <shape android:shape="rectangle">
             <solid android:color="?colorSurface" />
-            <corners android:bottomLeftRadius="@dimen/background_rounded_corner_radius" android:bottomRightRadius="@dimen/background_rounded_corner_radius"/>
+            <corners
+                android:bottomLeftRadius="@dimen/background_rounded_corner_radius"
+                android:bottomRightRadius="@dimen/background_rounded_corner_radius" />
         </shape>
     </item>
 </layer-list>
