--- a/app/src/main/res/layout/offer_info_area.xml
+++ b/app/src/main/res/layout/offer_info_area.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="@dimen/offer_info_icon"
             android:layout_height="@dimen/offer_info_icon"
-            android:src="@drawable/placeholder_icon" />
+            android:src="@drawable/ic_coverage" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
         <ImageView
             android:layout_width="@dimen/offer_info_icon"
             android:layout_height="@dimen/offer_info_icon"
-            android:src="@drawable/placeholder_icon" />
+            android:src="@drawable/ic_coverage" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -81,7 +81,7 @@
         <ImageView
             android:layout_width="@dimen/offer_info_icon"
             android:layout_height="@dimen/offer_info_icon"
-            android:src="@drawable/placeholder_icon" />
+            android:src="@drawable/ic_coverage" />
 
         <LinearLayout
             android:layout_width="wrap_content"
