--- a/app/src/main/res/layout/offer_peril_area.xml
+++ b/app/src/main/res/layout/offer_peril_area.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/base_margin_double"
-            android:src="@drawable/ic_shield" />
+            android:src="@drawable/ic_coverage" />
 
         <TextView
             android:textAppearance="?textAppearanceBody1"
