--- a/app/src/main/res/layout/offer_terms_area.xml
+++ b/app/src/main/res/layout/offer_terms_area.xml
@@ -48,10 +48,20 @@
         android:layout_marginTop="@dimen/base_margin_double"
         android:orientation="vertical" />
 
-    <LinearLayout
-        android:id="@+id/termsButtonContainer"
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/termsButtonContainer"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="vertical"-->
+    <!--        android:paddingTop="@dimen/base_margin_octuple" />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/termsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/base_margin_octuple" />
+        android:paddingTop="@dimen/base_margin_octuple"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/offer_terms_area_button"
+        tools:itemCount="2" />
+
 </LinearLayout>
