--- a/app/src/main/res/layout/offer_terms_area_button.xml
+++ b/app/src/main/res/layout/offer_terms_area_button.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/button"
     xmlns:tools="http://schemas.android.com/tools"
     style="?materialButtonOutlinedStyle"
     android:layout_width="match_parent"
