--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -36,7 +36,7 @@
                     android:gravity="center"
                     android:text="@string/PROFILE_FEEDBACK_HEADER"
                     android:textAppearance="?textAppearanceHeadline3"
-                    android:textColor="?colorOnPrimary" />
+                    android:textColor="@color/hedvig_off_white" />
 
             </FrameLayout>
 
