--- a/app/src/main/res/drawable/button_primary.xml
+++ b/app/src/main/res/drawable/button_primary.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#AAAAAA">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#AAAAAA">
     <item>
-        <shape android:padding="10dp" android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
-            <corners android:radius="@dimen/base_margin"/>
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF" />
+            <corners android:radius="@dimen/base_margin" />
         </shape>
     </item>
 </ripple>
