--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -21,52 +21,18 @@
             layout="@layout/loading_spinner"
             tools:visibility="gone" />
 
-        <com.hedvig.app.ui.view.HedvigCardView
-            android:id="@+id/infoBox"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/infoCards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/base_margin_double"
-            android:layout_marginTop="@dimen/base_margin_double"
             android:layout_marginEnd="@dimen/base_margin_double"
-            android:padding="@dimen/base_margin_double"
-            android:visibility="gone"
-            tools:visibility="visible">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/infoBoxTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textAppearance="?textAppearanceHeadline6"
-                    tools:text="@string/DASHBOARD_SETUP_DIRECT_DEBIT_TITLE" />
-
-                <TextView
-                    android:id="@+id/infoBoxBody"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/base_margin"
-                    android:textAlignment="center"
-                    android:textAppearance="?textAppearanceBody2"
-                    tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_DESCRIPTION" />
-
-                <Button
-                    android:id="@+id/infoBoxButton"
-                    style="?materialButtonOutlinedStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/base_margin_double"
-                    tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_BUTTON_LABEL" />
-
-            </LinearLayout>
-
-        </com.hedvig.app.ui.view.HedvigCardView>
+            android:nestedScrollingEnabled="false"
+            android:orientation="vertical"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="3"
+            tools:listitem="@layout/dashboard_info_card" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contracts"
