I mean, it works

--- a/app/src/main/res/layout/dashboard_info_card.xml
+++ b/app/src/main/res/layout/dashboard_info_card.xml
@@ -4,7 +4,9 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_double"
+    android:layout_marginEnd="@dimen/base_margin_double"
     android:padding="@dimen/base_margin_double">
 
     <LinearLayout
