--- a/app/src/main/res/layout/dashboard_upsell.xml
+++ b/app/src/main/res/layout/dashboard_upsell.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/base_margin_double"
+    android:layout_marginEnd="@dimen/base_margin_double"
     android:orientation="vertical">
 
     <com.hedvig.app.ui.view.HedvigCardView
