--- a/app/src/main/res/values/button_themes.xml
+++ b/app/src/main/res/values/button_themes.xml
@@ -12,7 +12,9 @@
         <item name="shapeAppearance">?shapeAppearanceLargeComponent</item>
     </style>
 
-    <style name="Hedvig.Button.Text" parent="Widget.MaterialComponents.Button.TextButton" />
+    <style name="Hedvig.Button.Text" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textColor">?colorButton</item>
+    </style>
 
     <style name="Hedvig.Button.Outlined" parent="Widget.MaterialComponents.Button.OutlinedButton" />
 
