--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -9,7 +9,7 @@
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V27" />
 
     <style name="Hedvig.Theme.Offer">
-        <item name="android:statusBarColor">@color/offer_background</item>
+        <item name="android:statusBarColor">@color/hedvig_black</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowLightNavigationBar">false</item>
     </style>
