--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -18,8 +18,7 @@
     <item name="textColorPrimary" type="color">@color/hedvig_dark_gray</item>
     <item name="textColorSecondary" type="color">@color/hedvig_black</item>
 
-    <item name="colorButton" type="color">@color/mtrl_btn_bg_color_selector</item>
-    <item name="textColorButton" type="color">@color/mtrl_btn_text_color_selector</item>
+    <item name="colorButton" type="color">@color/colorPrimary</item>
 
     <item name="colorBackgroundChat" type="color">@color/hedvig_off_white</item>
     <item name="colorChatUserBackground" type="color">@color/hedvig_light_gray</item>
