--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -15,7 +15,6 @@
         <item name="colorError">@color/coral_500</item>
         <item name="colorOnError">@color/hedvig_white</item>
         <item name="colorButton">@color/colorButton</item>
-        <item name="textColorButton">@color/textColorButton</item>
         <item name="android:textColorPrimary">@color/colorPrimaryVariant</item>
         <item name="android:textColorSecondary">@color/colorPrimary</item>
         <item name="fontFamily">@font/favorit_book</item>
@@ -64,7 +63,6 @@
     <attr name="materialButtonTextStyle" format="reference" />
     <attr name="textAppearanceBody3" format="reference" />
     <attr name="colorButton" format="reference" />
-    <attr name="textColorButton" format="reference" />
 
     <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="android:textAllCaps">false</item>
@@ -85,7 +83,7 @@
     <style name="ThemeOverlay.Hedvig.MarketingActivity" parent="">
         <item name="colorPrimary">@color/hedvig_white</item>
         <item name="colorButton">@color/hedvig_white</item>
-        <item name="textColorButton">@color/hedvig_black</item>
+        <item name="colorOnPrimary">@color/hedvig_black</item>
         <item name="colorOnSurface">@color/hedvig_white</item>
         <item name="android:textColor">@color/white</item>
     </style>
